--- a/package.json
+++ b/package.json
@@ -41,15 +41,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.24",
+    "googleapis": "^162.0.0",
     "inngest": "^3.39.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^5.4.54",
+    "pdfjs-dist": "^5.4.296",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
