--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tiptap/extension-underline": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
+    "@vercel/analytics": "^1.6.1",
     "antd": "^5.27.4",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
