--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "inngest": "^3.39.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.296",
@@ -77,7 +77,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^15.4.2",
     "postcss": "^8.5.6",
     "prisma": "^6.10.1",
     "tailwindcss": "^4.1.11",
